#+title: Changelog

* screamer/core 5.2.2
- Bugfix: ~domain-size~ no longer potentially calculates
  incorrect sizes for integer variables with non-integer
  lower and upper bounds.
* screamer/prob
- Add gensyms in ~all-values-prob~ where before we were
  inserting symbols directly.
- Resolve some compiler warnings in ~all-values-prob~.
* Maintenance changes
- Move ~screamer/prob~ out of default ~screamer~ system,
  restoring the original scope of the default ~screamer~
  experience.
- Add contribution policy to README to avoid future instability
  and better set expectations for contributors.
* screamer/parallel 0.0.1
Break out parallelism constructs into their own separate system.
* screamer/core v5.2.1
We are trying out not tracking overall version numbers unless a
major or cross-module change was made. Instead changes to modules
will each be tracked separately in this changelog. Feel free to
provide feedback on this approach while we try it out!

Changes in this version:
- Enhancement: When using ~divide-and-conquer-force~ to solve for
  a ~real~ variable which is not known to have a finite domain, we
  now attempt to enumerate potential values.
  - The previous behavior was to either search infinitely or fill
    up the stack and crash the underlying Lisp implementation. This
    occurred even if only a finite number of solutions was requested.
  - This value enumeration includes all integers in the initial range,
    and up to ~*maximum-discretization-range*~ + X additional values
    for every range considered by ~divide-and-conquer-force~.
- Minor incompatible change: Some invalid assumptions in the logic
  for variable arithmetic have been removed. This may cause
  infinite search in code which previously (incorrectly) resolved
  to specific values. Thanks to @PHRaposo for [[https://github.com/swapneils/screamer/issues/10][the report]].
- Bugfix: Missing ~local~ declarations have been added to some